income under align fix

--- a/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
+++ b/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
@@ -1460,8 +1460,8 @@ h2.benefitsCheckUpTitle {
     margin-top: 5px;
 }
 
-#label_bcuqc_income_1000 {
-    margin-top: 10px;
+#label_bcuqc_income_under {
+    margin-bottom: 10px;
 }
 
 
